--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,11 @@
 .footer{
 	width: 100vw;
 	height: 70vh;
-	position: relative;
-	top: 125vh;
+	position: absolute;
+	top: 683.1vh;
 	background-repeat: no-repeat;
-	background-size: cover
+	background-size: cover;
+	overflow: hidden;
 }
 .column1, .column2, .column3{
 	width: 22vw;
@@ -62,13 +63,15 @@
 	width: 20vw;
 	height: 5vh;
 	outline: none;
+	padding: 1vw;
+    box-sizing: border-box;
 	display: block !important;
 	font-style: normal !important;
 	opacity: 1 !important;
 }
 ::placeholder{
 	color: white;
-	font-size: 1vw;
+	font-size: 0.7vw;
 }
 .submit_button{
 	width: 8vw;
